# puma_motor_driver

./: CMakeLists.txt  README.md  dependencies.repos  omni.launch
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
clearpath_socketcan_interface/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml  socketcan_interface_plugin.xml
clearpath_socketcan_interface/include/clearpath_socketcan_interface/: asio_base.hpp  bcm.hpp  dispatcher.hpp  dummy.hpp  filter.hpp  interface.hpp  logging.hpp  make_shared.hpp  reader.hpp  socketcan.hpp  string.hpp  threading.hpp
clearpath_socketcan_interface/src/: canbcm.cpp  candump.cpp  clearpath_socketcan_interface_plugin.cpp  string.cpp
clearpath_socketcan_interface/test/: test_dispatcher.cpp  test_dummy_interface.cpp  test_filter.cpp  test_string.cpp
include/puma_motor_driver/: can_proto.h  driver.h  gateway.h  message.h  protocol.h  serial_gateway.h  socketcan_gateway.h
puma_motor_driver/: CHANGELOG.rst  CMakeLists.txt  LICENSE  mecanum.launch  omni.launch  package.xml
puma_motor_driver/config/: 2wd.yaml  4wd.yaml  dingo_d.yaml  dingo_o.yaml
puma_motor_driver/include/puma_motor_driver/: can_proto.h  diagnostic_updater.h  diagnostic_updater.hpp  driver.h  driver.hpp  gateway.h  gateway.hpp  message.h  message.hpp  multi_driver_node.h  multi_driver_node.hpp  multi_puma_node.hpp  serial_gateway.h  socketcan_gateway.h  socketcan_gateway.hpp
puma_motor_driver/launch/: multi_puma.launch.py  omni.launch
puma_motor_driver/scripts/: joy_simple
puma_motor_driver/src/: diagnostic_updater.cpp  driver.cpp  multi_controller_node.cpp  multi_driver_node.cpp  multi_puma_node.cpp  serial_gateway.cpp  socketcan_gateway.cpp
puma_motor_driver/test/: fixed_point_test.cpp
puma_motor_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
puma_motor_msgs/msg/: Feedback.msg  MultiFeedback.msg  MultiStatus.msg  Status.msg
scripts/: joy_omni
socketcan_interface/: CMakeLists.txt  package.xml
socketcan_interface/include/socketcan_interface/: socketcan.hpp
socketcan_interface/src/: candump.cpp  socketcan_interface_plugin.cpp
src/: driver.cpp  multi_controller_node.cpp  serial_gateway.cpp
