<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>clearpath_socketcan_interface</name>
  <version>0.8.2</version>
  <description>Clearpath's CAN interface description with helpers for filtering and driver implementation. Further a socketcan implementation based on boost::asio is included.</description>

  <maintainer email="lcamero@clearpathrobotics.com">Mathias Lüdtke</maintainer>

  <license>LGPLv3</license>

  <url type="repository">https://github.com/clearpathrobotics/puma_motor_driver</url>
  <url type="bugtracker">https://github.com/clearpathrobotics/puma_motor_driver/issues</url>

  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>boost</depend>
  <depend>pluginlib</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>linux-kernel-headers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
