<?xml version="1.0"?>
<package format="2">
  <name>puma_motor_driver</name>
  <version>1.0.0</version>
  <description>A ROS driver for Puma single-channel motor control board.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>diagnostic_updater</depend>
  <depend>puma_motor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>clearpath_socketcan_interface</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>serial_driver</depend> -->

  <exec_depend>can-utils</exec_depend>
  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
